--- a/LogSearcher/appsettings.json
+++ b/LogSearcher/appsettings.json
@@ -2,6 +2,7 @@
   "AppSettings": {
     "NotePadPP_Path": "C:\\Program Files (x86)\\Notepad++",
     "NotePadPP_Exe": "notepad++",
-    "UseNPP": true
+    "UseNPP": true,
+    "HistoryPath":  "c:\\temp\\Settings"
   }
 }
