--- a/LogSearcher/appsettings.json
+++ b/LogSearcher/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "NotePadPP_Path": "C:\\Program Files (x86)\\Notepad++",
+    "NotePadPP_Path": "C:\\Program Files\\Notepad++",
     "NotePadPP_Exe": "notepad++",
     "UseNPP": true,
     "HistoryPath":  "c:\\temp\\Settings"
