--- a/LogSearcher/LogSearcher.csproj
+++ b/LogSearcher/LogSearcher.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>LogSearcherCore.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
